# kdev-bjam

./: .gitignore  CMakeLists.txt  boostbuildmanager.cpp  boostbuildmanager.h  kde-bjam.kdev4  kde-bjamplugin.cpp  kde-bjamplugin.h  kde-bjamui.rc  kde-bjamview.h  kdevelop_boostbuild.desktop  kdevelop_boostbuild.rc  ktexteditor_kde-bjam.desktop
manager/: CMakeLists.txt  boostbuildmanager.cpp  boostbuildmanager.h  kdevboostbuildmanager.desktop  kdevboostbuildmanager.rc
